[package]
edition = "2021"
name = "break-gt"
version = "0.1.0"

[dependencies]
which = "4.2.4"
#log = "0.4.14"
tempfile = "3.3.0"
shiplift = "0.7.0"
futures-util = "0.3.21"
async-std = { version = "1.10.0", features = [
    "attributes",
    "tokio1" # tokio compat needed for shiplift (kinda kringe, but should work)
] }
tide = "0.16.0"
tide-rustls = "0.3.0"
openidconnect = "2.2.0"
isahc = "1.6.0"
once_cell = "1.9.0"
regex = "1.5.4"
lazy_static = "1.4.0"
serde_json = "1.0.79"
serde = "1.0.136"
dotenv = "0.15.0"
anyhow = "1.0.55"
thiserror = "1.0.30"
serde_qs = "0.8.5"
async-broadcast = "0.4.0"
itertools = "0.10.3"
average = "0.13.1"
opentelemetry-jaeger = { version = "0.16.0", features = [ "rt-async-std", "collector_client", "isahc", "isahc_collector_client"] }
opentelemetry = { version = "0.17.0", features = [ "rt-async-std"] }

tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", default-features = false, features = ["std", "tracing", "env-filter", "ansi", "time"] }
opentelemetry-tide = "0.12.0"
tide-tracing = "0.0.11"
tracing-opentelemetry = "0.17.2"
tracing-log = "0.1.2"
mime_guess = "2.0.4"

entity = { path = "entity" }
frontend-bundle = { path = "frontend-bundle" }

[workspace]
members = [
    "frontend-bundle",
    "migration",
    "entity",
]
