[package]
edition = "2021"
name = "break-gt"
version = "0.1.0"

[profile.release]
debug = 1
#lto = "thin"

[dependencies]
futures-util = "0.3.21"
async-std = { version = "1.10.0", features = [
    "attributes",
    "tokio1" # tokio compat needed for shiplift (kinda kringe, but should work)
] }
tide = "0.16.0"
tide-rustls = "0.3.0"
serde_json = "1.0.79"
serde = "1.0.136"
dotenv = "0.15.0"
anyhow = "1.0.55"
serde_qs = "0.8.5"
futures-signals = "0.3.24"
itertools = "0.10.3"
average = "0.13.1"
async-trait = "0.1.52"
chrono = "0.4.19"

opentelemetry-jaeger = { version = "0.16.0", features = [ "rt-async-std" ] }
opentelemetry = { version = "0.17.0", features = [ "rt-async-std"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", default-features = false, features = ["std", "tracing", "env-filter", "ansi", "time"] }
opentelemetry-tide = "0.12.0"
tide-tracing = "0.0.11"
tracing-opentelemetry = "0.17.2"
tracing-log = "0.1.2"

mime_guess = "2.0.4"

entity = { path = "entity" }
migration = { path = "migration" }
auth = { path = "auth" }
execution = { path = "execution" }
frontend-bundle = { path = "frontend-bundle" }

[workspace]
members = [
    "auth",
    "frontend-bundle",
    "migration",
    "entity",
]
