[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-std = "1.10.0"
futures-util = "0.3.21"
tide = "0.16.0"
openidconnect = "2.2.0"
isahc = "1.6.0"
once_cell = "1.9.0"
serde = "1.0.136"
tracing = "0.1.31"
thiserror = "1.0.30"