[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.6.0", features = ["sqlx-sqlite", "runtime-async-std-rustls", "macros"], default-features = false }
serde = "1.0.136"
chrono = "0.4.19"